refactor: sonarQube improvements