@@ -2,8 +2,8 @@ package com.dbserver.service;
 
 import com.dbserver.exception.BusinessException;
 import com.dbserver.exception.EntityNotFoundException;
-import com.dbserver.model.dto.AgendaRequestDTO;
 import com.dbserver.model.dto.AgendaDTO;
+import com.dbserver.model.dto.AgendaRequestDTO;
 import com.dbserver.model.entity.Agenda;
 import com.dbserver.model.mapper.AgendaMapper;
 import com.dbserver.repository.AgendaRepository;
@@ -13,12 +13,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AgendaService {
 
-    private final Logger LOGGER = LoggerFactory.getLogger(this.getClass());
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     @Autowired
     private AgendaRepository agendaRepository;
@@ -26,10 +25,10 @@ public class AgendaService {
     private AgendaMapper agendaMapper;
 
     public AgendaDTO create(AgendaRequestDTO agendaRequestDTO) {
-        LOGGER.info("Starting agenda creation: {}", agendaRequestDTO);
+        logger.info("Starting agenda creation: {}", agendaRequestDTO);
         Agenda agenda = agendaMapper.toEntity(agendaRequestDTO);
         AgendaDTO agendaDTO = agendaMapper.toDTO(this.save(agenda));
-        LOGGER.info("Agenda created: {}", agendaDTO);
+        logger.info("Agenda created: {}", agendaDTO);
         return agendaDTO;
     }
 
@@ -37,22 +36,22 @@ public class AgendaService {
         try {
             return agendaRepository.save(agenda);
         } catch (RuntimeException e) {
-            LOGGER.error("Error saving agenda: {}", agenda);
+            logger.error("Error saving agenda: {}", agenda);
             throw new BusinessException();
         }
     }
 
     public AgendaDTO getAgendaDTOById(String id) {
-        LOGGER.info("Starting agenda search: {}", id);
+        logger.info("Starting agenda search: {}", id);
         AgendaDTO agendaDTO = agendaMapper.toDTO(this.findById(id));
-        LOGGER.info("Agenda found: {}", agendaDTO);
+        logger.info("Agenda found: {}", agendaDTO);
         return agendaDTO;
     }
 
     public Agenda findById(String id) {
         return agendaRepository.findById(id)
                 .orElseThrow(() -> {
-                    LOGGER.error("Agenda not found: {}", id);
+                    logger.error("Agenda not found: {}", id);
                     throw new EntityNotFoundException("Agenda not found");
                 });
     }
@@ -60,7 +59,7 @@ public class AgendaService {
     public List<AgendaDTO> getAll() {
         return agendaRepository.findAll().stream()
                 .map(agenda -> agendaMapper.toDTO(agenda))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
